impc_prod_tracker/kube/wp/production/keycloack-service/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: mi-production-tracker-test
  labels:
    app: keycloak
spec:
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
