impc_prod_tracker/kube/wp/production/keycloack-service/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: mi-production-tracker-test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: keycloak.gentar.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 9090
  tls:
    - hosts:
        - keycloak.yourdomain.com
      secretName: keycloak-tls
